use pest for parsing

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ color-backtrace = '0.5'
 colored = '2'
 derive_more = '0.99'
 itertools = '0.10'
+pest = '2'
+pest_derive = '2'
 rand = '0.8'
-rpds = '0.8'
 tokenate.path = '../tokenate'
