--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ derive_more = '0.99'
 itertools = '0.10'
 pest = '2'
 pest_derive = '2'
-rand = '0.8'
+thiserror = '1'
 tokenate.path = '../tokenate'
 
 [features]
