--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ clap.version = '3.0.0-beta.2'
 color-backtrace = '0.5'
 colored = '2'
 derive_more = '0.99'
+indexmap = '1'
 itertools = '0.10'
 pest = '2'
 pest_derive = '2'
