list literals work

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,10 @@
     ],
     "spellright.documentTypes": [
         "latex"
-    ]
+    ],
+    "files.associations": {
+        "type_traits": "cpp",
+        "xtr1common": "cpp",
+        "xutility": "cpp"
+    }
 }
