improve command-line interface

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ name = 'noot'
 version = '0.1.0'
 
 [dependencies]
+anyhow = '1'
 clap.features = ['derive']
 clap.version = '3.0.0-beta.2'
 color-backtrace = '0.5'
@@ -12,7 +13,6 @@ itertools = '0.10'
 pest = '2'
 pest_derive = '2'
 rpds = '0.9'
-thiserror = '1'
 
 [features]
 debug = []
