--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 authors = ['Kai Schmidt <kaikaliischmidt@gmail.com>']
 edition = '2018'
-name = 'noot'
+name = 'kin'
 version = '0.1.0'
 
 [dependencies]
